feat: Switch font family for H1 and add TSX script
Changed the font family for the main H1 heading from `font-serif` to `font-sans` for a more modern look.
Also, added the script tag for `index.tsx` in `index.html` to ensure the React application is correctly loaded.

--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
 </head>
   <body class="bg-deep-950 text-white antialiased selection:bg-gold-400 selection:text-deep-950">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
