feat: Enhance scrolling and add CTA link
Adds smooth scrolling behavior to the page by setting `scroll-smooth` on the html tag. Also updates the intro section to use a link for the call to action, allowing users to click and scroll directly to the "For Whom" section.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="he" dir="rtl" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -58,9 +58,6 @@
       }
     </script>
     <style>
-      html {
-        scroll-behavior: smooth;
-      }
       body {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
