feat: Update script path for module import
Changes the `src` attribute of the script tag in `index.html` from `./index.tsx` to `/index.tsx`. This ensures the module is correctly loaded when deployed as a static site or served from the root.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         text-shadow: 0 0 20px rgba(169, 96, 238, 0.6);
       }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.1",
@@ -90,6 +90,6 @@
 </head>
   <body class="bg-deep-950 text-white antialiased selection:bg-gold-400 selection:text-deep-950">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
